--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ h3{
     text-decoration: none;
     width: 80%;
     height: 48px;
-    margin: 0 auto;
+    margin: 20px auto;
     border-radius: 24px;
     border: none;
     background-color: #5E3189;
